--- a/About.html
+++ b/About.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/home_css.css">
+	<link rel="stylesheet" type="text/css" href="Css/about.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 </head>
 <body>
@@ -19,9 +19,9 @@
 
 		<a href="index.html" class="lhome"><li >Home</li></a>
 		
-		<a href="About.html" class="labout"><li>About</li></a>
+		<a href="#" class="labout"><li>About</li></a>
 		
-		<a href="cv.html" class="lcv"><li>CV</li></a>
+		<a href="#" class="lcv"><li>CV</li></a>
 
 		<a href="#" class="lmodel"><li>modelsgp</li></a>
 
@@ -31,20 +31,8 @@
 	</ul>
 </div>
 </header>
-	<content>
-		
-		
-		<div class="content_box">
-			
-			I am Arbin Khadka A web designer and a computer enthusiastic.<br>
-			Want to know more about me then visit my CV , About or Contact page<br>
-
-
-	</content></div>
-	<div class="icons">
-	<a href="#"><img src="img/resume.png" class="icnlogo"></a>
-	<a href="#"><img src="img/businessman.png" class="icnlogo"></a>
-	<a href="#"><img src="img/contact.png" class="icnlogo"></a>
-	</div>
-</body>
-</html>
+<div class="title"><h1>About Me</h1></div>
+<content><h2>Hello I am Arbin</h2><br>
+	<img src="img/1.jpg" class="picture"><br>
+	<p>Hello My name is Arbin Khadka </p>
+	<p>I currently am a student of University Of Northampton and Studying at Nami College.</p></content>
