--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 	<title>Home</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/home_css.css">
+	<link rel="stylesheet" type="text/css" href="Css/cs.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 </head>
 <body>
@@ -21,7 +21,7 @@
 		
 		<a href="About.html" class="labout"><li>About</li></a>
 		
-		<a href="cv.html" class="lcv"><li>CV</li></a>
+		<a href="#" class="lcv"><li>CV</li></a>
 
 		<a href="#" class="lmodel"><li>modelsgp</li></a>
 
@@ -31,20 +31,3 @@
 	</ul>
 </div>
 </header>
-	<content>
-		
-		
-		<div class="content_box">
-			
-			I am Arbin Khadka A web designer and a computer enthusiastic.<br>
-			Want to know more about me then visit my CV , About or Contact page<br>
-
-
-	</content></div>
-	<div class="icons">
-	<a href="#"><img src="img/resume.png" class="icnlogo"></a>
-	<a href="#"><img src="img/businessman.png" class="icnlogo"></a>
-	<a href="#"><img src="img/contact.png" class="icnlogo"></a>
-	</div>
-</body>
-</html>
