--- a/cv.html
+++ b/cv.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>CV</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="Css/cs.css">
+	<link rel="stylesheet" type="text/css" href="Css/cv.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 </head>
 <body>
@@ -27,7 +27,18 @@
 
 		<a href="#" class="lsocial"><li>Social</li></a>
 		
-		<a href="#" class="lcontact"><li>Contact</li></a>
+		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
 	</ul>
 </div>
 </header>
+<content>
+	<div class="bio"></div>
+	<ul>
+		<li><img src="img/1.jpg" class="pic"></li>
+		<li>Name: Arbin Khadka</li>
+		<li>Age: 21 years old</li>
+		<li>Address: Manamaiju, Kathmandu</li>
+		<li>Contact: +9779810367082</li>
+	</ul>
+	<div class="skill"></div>
+</content>
