--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<a href="#" class="lsocial"><li>Social</li></a>
 		
-		<a href="#" class="lcontact"><li>Contact</li></a>
+		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
 	</ul>
 </div>
 </header>
