--- a/About.html
+++ b/About.html
@@ -21,13 +21,13 @@
 		
 		<a href="#" class="labout"><li>About</li></a>
 		
-		<a href="#" class="lcv"><li>CV</li></a>
+		<a href="cv.html" class="lcv"><li>CV</li></a>
 
 		<a href="#" class="lmodel"><li>modelsgp</li></a>
 
 		<a href="#" class="lsocial"><li>Social</li></a>
 		
-		<a href="#" class="lcontact"><li>Contact</li></a>
+		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
 	</ul>
 </div>
 </header>
