--- a/cv.html
+++ b/cv.html
@@ -23,22 +23,62 @@
 		
 		<a href="#" class="lcv"><li>CV</li></a>
 
-		<a href="#" class="lmodel"><li>modelsgp</li></a>
+		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
 
-		<a href="#" class="lsocial"><li>Social</li></a>
+		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
 	</ul>
 </div>
 </header>
 <content>
-	<div class="bio"></div>
+	<div class="bio">
+		
 	<ul>
 		<li><img src="img/1.jpg" class="pic"></li>
-		<li>Name: Arbin Khadka</li>
-		<li>Age: 21 years old</li>
+		<li><h2><div class="name">Arbin Khadka</div></h2></li><br>
+		<li><h3>Profile</h3></li>
+		
+		<li>I am currently a student on university of Northampon.
+			I study networking in NAMI college. I am curious and like to
+			explore and study about new things that I am curious about. I am
+			a computer enthusiastic and am always curious how computer works.
+		Besiding designing websites and studying I play game and play guitar at my free time.</li><br>
+		<li><h3>Contact</h3></li>
 		<li>Address: Manamaiju, Kathmandu</li>
 		<li>Contact: +9779810367082</li>
+		<li>Email: arbinkhadka10@gmail.com</li>
+
 	</ul>
-	<div class="skill"></div>
+</div>
+
+	<div class="skill">
+		<ul>
+			<li><h3>Academics</h3></li>
+			<li><b>2017-Present: </b>Pursuing Bachelors Degree in University of Northampton.</li>
+			<li><b>2016-2014: </b>Studied High school in Takshashila Academy.</li> 
+			<li><b>2014-2002:</b>Studies school in Angels' Heart School.</li><br><hr> 
+			<li><h3>Skills</h3></li>
+			<li><b>English:</b> Fluent in english. Scored "95" Marks in TOEFL exam.</li><br>
+			<li><b>Programming and Computer skills:</b><ol>
+				<li>A great HTML and CSS coder</li>
+				<li>Good Java coder</li>
+				<li>Good at basic Liunx scripting</li>
+				<li>Good at Networking basics</li> 
+				<li>Good at Database designing</li> <br>
+
+				</ol></li>
+			<li><b>Other Essential Skills:</b><ol>
+				<li>Good communication skills.</li>
+				<li>Creative and curious</li>
+				<li>Fast Learner</li>
+				<li>Fast Typing skills</li>
+				<li>Professionalism</li>
+			</ol></li>
+
+
+		</ul>
+	</div>
 </content>
+</body>
+</html>
