--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		
 		<a href="cv.html" class="lcv"><li>CV</li></a>
 
-		<a href="#" class="lmodel"><li>modelsgp</li></a>
+		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
 
-		<a href="#" class="lsocial"><li>Social</li></a>
+		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
 	</ul>
