--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
 	<title>Contact</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/contact.css">
+	<link rel="stylesheet" type="text/css" href="Css/contact.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 </head>
 <body>
