--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/about.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
 <body>
 <header>
@@ -31,8 +32,23 @@
 	</ul>
 </div>
 </header>
-<div class="title"><h1>About Me</h1></div>
-<content><h2>Hello I am Arbin</h2><br>
-	<img src="img/1.jpg" class="picture"><br>
-	<p>Hello My name is Arbin Khadka </p>
-	<p>I currently am a student of University Of Northampton and Studying at Nami College.</p></content>
+
+<content>
+	<div class="title"><h1>About Me</h1></div><br>
+	
+
+	<img src="img/aboutpic.jpg" class="picture"><br>
+	<h2>Hello I am Arbin</h2><br>
+	<p>Get to know more about me. </p>
+	<p>Age: 21 </p>
+	<p>Gender: Male</p>
+	<p>Religion: Athiest</p>
+	<p>Job Title: Student</p>
+	<P>Subject: Network Engineering</p>
+
+</P>
+</content>
+<footer>&copy; 2018 Arbin Khadka</footer>
+</body>
+</html>
+
