--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/contact.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
 <body>
 <header>
@@ -23,17 +24,33 @@
 		
 		<a href="cv.html" class="lcv"><li>CV</li></a>
 
-		<a href="#" class="lmodel"><li>modelsgp</li></a>
+		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
 
-		<a href="#" class="lsocial"><li>Social</li></a>
+		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="#" class="lcontact"><li>Contact</li></a>
 	</ul>
 </div>
 </header>
+
 <content>
-	<div class="info">
-		<div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1OGwarxhGQTvrM12J0p2gSVAuE42GduV_" width="400" height="400"></iframe></div>
-	</div>
+<div class="heading"><h1>Contact me</h1></div><br><br>
+	<ul>
+		<li><div class="info">
+
+			You you want to get in touch feel free to contact me.<br>
+			
+			Address: Manamaiju, Kathmandu, Nepal<br>
+			Phone Number: +9779810367082<br>
+			E-mail: arbinkhadka10@gmail.com<br>
+			
+			<br><p>
+			If you want to get connected you can visit my <a href="Social.html">Social</a> page.<br> And aside is the Google Map of my location.</p>	
+		</div></li>
+		<li><div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1OGwarxhGQTvrM12J0p2gSVAuE42GduV_" width="640" height="480"></iframe></div></li>
+	</ul>
 	
 </content>
+<footer>&copy; 2018 Arbin Khadka</footer>
+</body>
+</html>
