--- a/Social.html
+++ b/Social.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CV</title>
+	<title>Social</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/social.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
 <body>
 <header>
@@ -45,3 +46,6 @@
 		<li><a href="https://www.linkedin.com/in/arbin-khadka-269735161/"  target="_blank"><div class="pic"><img src="img/png/in-r.png"><br>Linkedin</div></a></li>
 	</ul></div>
 </content>
+<footer>&copy; 2018 Arbin Khadka</footer>
+</body>
+</html>
