--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
 <body>
 <header>
@@ -32,19 +33,21 @@
 </div>
 </header>
 	<content>
+		<h1>Welcome To My Page</h1><br><br>
 		
-		
-		<div class="content_box">
-			
 			I am Arbin Khadka A web designer and a computer enthusiastic.<br>
 			Want to know more about me then visit my CV , About or Contact page<br>
 
-
-	</content></div>
+	
 	<div class="icons">
-	<a href="#"><img src="img/resume.png" class="icnlogo"></a>
-	<a href="#"><img src="img/businessman.png" class="icnlogo"></a>
-	<a href="#"><img src="img/contact.png" class="icnlogo"></a>
+		<ul>
+	<li><a href="cv.html"><img src="img/resume.png" class="icnlogo"></a><br>CV</li>
+	<li><a href="About.html"><img src="img/businessman.png" class="icnlogo"></a><br>About</li>
+	<li><a href="Contact.html"><img src="img/contact.png" class="icnlogo"></a><br>Contact</li>
+</ul>
 	</div>
+	</content>
+	<footer>&copy; 2018 Arbin Khadka</footer>
 </body>
+
 </html>
