--- a/cv.html
+++ b/cv.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/cv.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
+	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
 <body>
 <header>
@@ -35,7 +36,7 @@
 	<div class="bio">
 		
 	<ul>
-		<li><img src="img/1.jpg" class="pic"></li>
+		<li><img src="img/cvpic.jpg" class="pic"></li>
 		<li><h2><div class="name">Arbin Khadka</div></h2></li><br>
 		<li><h3>Profile</h3></li>
 		
@@ -80,5 +81,6 @@
 		</ul>
 	</div>
 </content>
+<footer>&copy; 2018 Arbin Khadka</footer>
 </body>
 </html>
