Final layout with responsive design

--- a/About.html
+++ b/About.html
@@ -39,7 +39,8 @@
 
 	<img src="img/aboutpic.jpg" class="picture"><br>
 	<h2>Hello I am Arbin</h2><br>
-	<p>Get to know more about me. </p>
+	<p>Get to know more about me. </p><br>
+	<p>Full Name: Arbin Khadka</p>
 	<p>Age: 21 </p>
 	<p>Gender: Male</p>
 	<p>Religion: Athiest</p>
