--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
 	<title>Contact</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="Css/contact.css">
+	<link rel="stylesheet" type="text/css" href="Css/Contact.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="Css/footer.css">
 </head>
@@ -34,20 +34,32 @@
 </header>
 
 <content>
-<div class="heading"><h1>Contact me</h1></div><br><br>
+<div class="heading"><h1>Contact me</h1></div><br>
 	<ul>
 		<li><div class="info">
 
-			You you want to get in touch feel free to contact me.<br>
+			Please leave a message.<br>
+			<form>
+				<label>First Name:</label><br>
+				<input type="text" name="fname"><br>
+				<label>Last Name:</label><br>
+				<input type="text" name="lname"><br>
+				<label>E-mail:</label><br>
+				<input type="text" name="e-mail"><br>
+				<label>Message me</label><br>
+				<textarea rows="10" cols="40" name="message">
+					Type your message...</textarea><br>
+					<input type="button" value="Submit"><input type="reset" name="Reset">
+			</form>
 			
-			Address: Manamaiju, Kathmandu, Nepal<br>
+			<p>
+			If you want to get connected <br>you can visit my <a href="Social.html">Social</a> page.<br> And here is the Google Map of my location.</p>	
+		</div></li>
+		<li><div class="map">Address: Manamaiju, Kathmandu, Nepal<br>
 			Phone Number: +9779810367082<br>
 			E-mail: arbinkhadka10@gmail.com<br>
 			
-			<br><p>
-			If you want to get connected you can visit my <a href="Social.html">Social</a> page.<br> And aside is the Google Map of my location.</p>	
-		</div></li>
-		<li><div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1OGwarxhGQTvrM12J0p2gSVAuE42GduV_" width="640" height="480"></iframe></div></li>
+			<br><div class="googlemap"><iframe src="https://www.google.com/maps/d/embed?mid=1OGwarxhGQTvrM12J0p2gSVAuE42GduV_" width="640" height="480"></iframe></div></div></li>
 	</ul>
 	
 </content>
