Final commit with full code

--- a/Social.html
+++ b/Social.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Social</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
-	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">	
 	<link rel="stylesheet" type="text/css" href="Css/social.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="Css/footer.css">
@@ -23,12 +23,12 @@
 		<a href="About.html" class="labout"><li>About</li></a>
 		
 		<a href="cv.html" class="lcv"><li>CV</li></a>
-
-		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
-
+		
 		<a href="#" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
+
+		<a href="report.html" class="lmodel" target="_blank"><li>Report</li></a>
 	</ul>
 </div>
 </header>
@@ -36,6 +36,7 @@
 	<div class="text">
 	<h1>Social links</h1><br><br>
 	If You want to get connected don't forget to visit my social links enlisted below:-</div><br><br>
+	<!-- Creating two rows in each three icons sits horizontally -->
 	<div class="firstrow>"><ul>
 		<li><a href="https://www.facebook.com/arbin.khadka000" target="_blank"><div class="pic"><img src="img/png/fb-r.png"><br>Facebook</div></a></li>
 		<li><a href="https://www.youtube.com/channel/UCz2iYQa5kxQOKa-IkSbTMTw"  target="_blank"><div class="pic"><img src="img/png/y-r.png"><br>YouTube</div></a></li>
