--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><!-- head, header and footersections are same in all web pages -->
 	<title>Home</title>
+	<!--links for importing .css files and fonts  -->
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="Css/footer.css">
+
 </head>
 <body>
+	<!-- The header section starts which contains the logo and naviation bar -->	
 <header>
 	
-		<a href="index.html"><img src="img/1.jpg" class="logo"></a>
+		<a href="index.html"><img src="img/1.jpg" class="logo" alt="logo"></a>
 		<div class="header"> <h1>Arbin Khadka</h1></div>
-	
+	<!-- navigation bar starts -->
 	<div class="nav">
-		
+		<!-- each link is listed in unordered list -->
 	<ul>
 
 		<a href="index.html" class="lhome"><li >Home</li></a>
@@ -23,30 +26,32 @@
 		<a href="About.html" class="labout"><li>About</li></a>
 		
 		<a href="cv.html" class="lcv"><li>CV</li></a>
-
-		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
-
+		
 		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
+
+		<a href="report.html" class="lmodel" target="_blank"><li>Report</li></a>
 	</ul>
 </div>
 </header>
+<!-- This is the content of the web page -->
 	<content>
 		<h1>Welcome To My Page</h1><br><br>
 		
 			I am Arbin Khadka A web designer and a computer enthusiastic.<br>
-			Want to know more about me then visit my CV , About or Contact page<br>
+			Want to know more about me then visit my CV , About or Contact page.<br>
 
-	
+	<!-- these are icons -->
 	<div class="icons">
 		<ul>
-	<li><a href="cv.html"><img src="img/resume.png" class="icnlogo"></a><br>CV</li>
-	<li><a href="About.html"><img src="img/businessman.png" class="icnlogo"></a><br>About</li>
-	<li><a href="Contact.html"><img src="img/contact.png" class="icnlogo"></a><br>Contact</li>
+	<li><a href="cv.html"><img src="img/resume.png" class="icnlogo" alt="resume"></a><br>CV</li>
+	<li><a href="About.html"><img src="img/businessman.png" class="icnlogo" alt="about"></a><br>About</li>
+	<li><a href="Contact.html"><img src="img/contact.png" class="icnlogo" alt="Contact"></a><br>Contact</li>
 </ul>
 	</div>
 	</content>
+	<!-- footer which is available in all web pages -->
 	<footer>&copy; 2018 Arbin Khadka</footer>
 </body>
 
