--- a/About.html
+++ b/About.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><!-- head and header section is same in all pages -->
 	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
@@ -20,22 +20,23 @@
 
 		<a href="index.html" class="lhome"><li >Home</li></a>
 		
-		<a href="#" class="labout"><li>About</li></a>
+		<a href="About.html" class="labout"><li>About</li></a>
 		
 		<a href="cv.html" class="lcv"><li>CV</li></a>
-
-		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
+		
 
 		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
+
+		<a href="report.html" class="lmodel" target="_blank"><li>Report</li></a>
 	</ul>
 </div>
 </header>
 
-<content>
+<content><!-- adding profile photo -->
 	<div class="title"><h1>About Me</h1></div><br>
-	
+	<!-- contents  -->
 
 	<img src="img/aboutpic.jpg" class="picture"><br>
 	<h2>Hello I am Arbin</h2><br>
