--- a/Contact.html
+++ b/Contact.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<title>Contact</title>
-	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
+	<!--links for importing .css files and fonts  -->
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link rel="stylesheet" type="text/css" href="Css/Contact.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="Css/footer.css">
+	<meta charset = "UTF-8">
 </head>
 <body>
+	<!-- The header section which contains the logo and naviation bar -->
 <header>
 	
-		<a href="index.html"><img src="img/1.jpg" class="logo"></a>
+		<a href="index.html"><img src="img/1.jpg" class="logo" alt="logo"></a>
 		<div class="header"> <h1>Arbin Khadka</h1></div>
 	
 	<div class="nav">
@@ -22,24 +25,23 @@
 		
 		<a href="About.html" class="labout"><li>About</li></a>
 		
-		<a href="cv.html" class="lcv"><li>CV</li></a>
-
-		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
+		<a href="cv.html" class="lcv"><li>CV</li></a>		
 
 		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="#" class="lcontact"><li>Contact</li></a>
+
+		<a href="report.html" class="lmodel" target="_blank"><li>Report</li></a>
 	</ul>
 </div>
 </header>
-
 <content>
 <div class="heading"><h1>Contact me</h1></div><br>
 	<ul>
 		<li><div class="info">
 
 			Please leave a message.<br>
-			<form>
+			<form><!-- creating forn for user feedback -->
 				<label>First Name:</label><br>
 				<input type="text" name="fname"><br>
 				<label>Last Name:</label><br>
@@ -58,7 +60,7 @@
 		<li><div class="map">Address: Manamaiju, Kathmandu, Nepal<br>
 			Phone Number: +9779810367082<br>
 			E-mail: arbinkhadka10@gmail.com<br>
-			
+			<!--embedded google maps -->
 			<br><div class="googlemap"><iframe src="https://www.google.com/maps/d/embed?mid=1OGwarxhGQTvrM12J0p2gSVAuE42GduV_" width="640" height="480"></iframe></div></div></li>
 	</ul>
 	
