--- a/cv.html
+++ b/cv.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<title>CV</title>
-	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
+	
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="Css/header&nav_css.css">
 	<link rel="stylesheet" type="text/css" href="Css/cv.css">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="Css/footer.css">
+	<meta charset = "UTF-8">
 </head>
 <body>
+	
 <header>
 	
-		<a href="index.html"><img src="img/1.jpg" class="logo"></a>
+		<a href="index.html"><img src="img/1.jpg" class="logo" alt="logo"></a>
 		<div class="header"> <h1>Arbin Khadka</h1></div>
 	
 	<div class="nav">
@@ -22,17 +25,17 @@
 		
 		<a href="About.html" class="labout"><li>About</li></a>
 		
-		<a href="#" class="lcv"><li>CV</li></a>
-
-		<a href="report.html" class="lmodel"><li>modelsgp</li></a>
+		<a href="cv.html" class="lcv"><li>CV</li></a>		
 
 		<a href="Social.html" class="lsocial"><li>Social</li></a>
 		
 		<a href="Contact.html" class="lcontact"><li>Contact</li></a>
+
+		<a href="report.html" class="lmodel" target="_blank"><li>Report</li></a>
 	</ul>
 </div>
 </header>
-<content>
+<content><!-- creating two sections using div -->
 	<div class="bio">
 		
 	<ul>
