Final with report and all docs

--- a/report.html
+++ b/report.html
@@ -8,7 +8,7 @@
 	</style>
 </head>
 <body>
-	<img src="report pics/rcover.jpg"><br>
+	<img src="img/rcover.jpg"><br>
 	<hr>
 	<Header><h1>Introduction</h1></Header>
 	<p>This report contains the web pages its screen shot and the inspiration from the where the idea came to design the web site. <br>
@@ -26,24 +26,24 @@
 <hr>
 <h2>Home Page</h2>
 <p>This is the landing page of the website. It is also a welcome page. A background cover is added[<a href="https://www.pinterest.com/pin/853572935597398150/">Downloaded from this link</a>] which you can see in the screenshot below. The navigation bar and footer also use back ground image[<a href="http://idolza.com/qz/o3u1439/wood-grain/29l34h/" target="_blank">Downloaded form this link</a>]. Three icons are used in this page for going to About, CV and Contact page the png image which is used is made by <a href="http://www.freepik.com" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>. The navigation bar contains a logo[Downloaded from <a href="https://www.pinterest.com/pin/495888608954905413/" target="_blank">this link</a>] which rotates when mouse is hovered. The screenshot of the page is given beow:</p>
-<img src="report pics/home.jpg" height="500px" width="900px"><br>
+<img src="img/home.jpg" height="500px" width="900px"><br>
 <hr>
 <h2>About Page</h2>
 <p> This page contains personal informations like age, name, religion, gender,etc. This page also contains a picture. An attractive gif image[Designed by <a href="http://jodeus.tumblr.com/" target="_blank">Jodeus</a>] is used as the background image for the page. The screenshot of the page is given below</p>
-<img src="report pics/rabout.jpg" height="450px" width="900px"><br>
+<img src="img/rabout.jpg" height="450px" width="900px"><br>
 <hr>
 <h2>CV page</h2>
 <p>This is the main page of the website because it contains CV, It contains a 3-D gif ball[Designed by <a href="http://jodeus.tumblr.com/" target="_blank">Jodeus</a>] as the background image. The body part of this page contain two sections. One section contains profile description and other contains skill description. The inspiration for this CV temlete is taken from[https://www.pinterest.com/pin/557250153874599997/] The Cv templete and the page screenshot are posted below</p>
-<img src="report pics/rcvinsp.jpg" height ="500px" width="300px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<img src="report pics/rCV.jpg" height ="500px" width="700>px"><br>
+<img src="img/rcvinsp.jpg" height ="500px" width="300px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img src="img/rCV.jpg" height ="500px" width="700>px"><br>
 <hr>
 <h2>Social Page</h2>
 <p>This page contains links of different social media profiles. It contains 6 icons which are arranged in 2 rows and 3 icons in a row. The icons are made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a> And the background image used is dsigned by [<a href="http://jodeus.tumblr.com/" target="_blank">Jodeus</a>]. The screenshot is posted below:-</p>
-<img src="report pics/rsocial.jpg" height ="500px" width="800>px"><br>
+<img src="img/rsocial.jpg" height ="500px" width="800>px"><br>
 <hr>
 <h2>Contact Page</h2>
 <p> This page contains the contact information. It contains phone number, address, email. Not only that but also it contains the google map of the location.The screenshot is provided below</p>
-<img src="report pics/rcontact.jpg" height ="500px" width="800>px"><br>
+<img src="img/rcontact.jpg" height ="500px" width="800>px"><br>
 <hr>
 <h1> Conclusion</h1>
 <p>This is the overall report of the webpages created. Idea to create this website was taken from other many websites. The header and footer are available fix at hop and bottom at every page for the ease of navigation. The website is user friendly and has pleasent visual effects. It is simple in design so the user have no dificulty in accessing the web pages. This site is responsive so it works </p>  
